--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -58,8 +58,8 @@
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
-    --primary: oklch(0.205 0 0);
-    --primary-foreground: oklch(0.985 0 0);
+    --primary: oklch(0.985 0 0);
+    --primary-foreground: oklch(0.205 0 0);
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
     --muted: oklch(0.97 0 0);
@@ -92,8 +92,8 @@
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.205 0 0);
     --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.922 0 0);
-    --primary-foreground: oklch(0.205 0 0);
+    --primary: oklch(0.205 0 0);
+    --primary-foreground: oklch(0.922 0 0);
     --secondary: oklch(0.269 0 0);
     --secondary-foreground: oklch(0.985 0 0);
     --muted: oklch(0.269 0 0);
@@ -117,4 +117,30 @@
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.556 0 0);
+}
+
+h1 {
+    @apply text-5xl leading-tight;
+    @apply md:text-7xl md:leading-tight;
+}
+
+h2 {
+    @apply text-4xl leading-tight;
+    @apply md:text-6xl md:leading-tight;
+}
+
+h3 {
+    @apply text-3xl leading-snug;
+}
+
+h4 {
+    @apply text-2xl leading-snug;
+}
+
+h5 {
+    @apply text-xl leading-normal;
+}
+
+p {
+    @apply text-lg leading-relaxed;
 }
